delegate wrapper and some core federation classes
